tests/ocp/1-007_verify_hostname_with_route/01-install.yaml
apiVersion: argoproj.io/v1beta1
kind: ArgoCD
metadata:
  name: argocd-long-name-for-route-test
spec:
  applicationSet:
    webhookServer:
      route:
        enabled: true
