tests/ocp/1-007_verify_hostname_with_route/02-delete.yaml
apiVersion: argoproj.io/v1beta1
kind: ArgoCD
metadata:
  name: argocd-long-name-for-route-test-applicationset-controller-webho
$delete: true
