tests/ocp/1-007_verify_hostname_with_route/04-cleanup.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: argoproj.io/v1beta1
  kind: ArgoCD
  name: argocd-long-name-for-route-testiiiiiiiiiiiiiiiiiiiiiiiing
