tests/ocp/1-007_verify_hostname_with_route/01-assert.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd-long-name-for-route-test-applicationset-controller-webho
spec: {}
status:
  ingress:
  - host: argocd-long-name-for-route-test-applicationset-controller-webho.apps.testing.lab.upshift.rdu2.redhat.com
